asm1/initial/src/main/mc/parser/.antlr/MCParser.py
# Generated from c:\Users\Hoang Kim\Desktop\assignment1\initial\src\main\mc\parser\MC.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MCParser ( Parser ):

    grammarFileName = "MC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'boolean'", "'break'", "'continue'", 
                     "'else'", "'for'", "'float'", "'if'", "'int'", "'return'", 
                     "'void'", "'do'", "'while'", "'true'", "'false'", "'string'", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'!'", "'%'", 
                     "'||'", "'&&'", "'!='", "'=='", "'<'", "'>'", "'<='", 
                     "'>='", "'='", "'['", "']'", "'{'", "'}'", "'('", "')'", 
                     "';'", "','", "'.'" ]

    symbolicNames = [ "<INVALID>", "WS", "ERROR_CHAR", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "PRIM_TYPE", "VOIDTYPE", "BOOLEAN_TYPE", 
                      "INTTYPE", "FLOAT_TYPE", "STRING_TYPE", "ARRAY_TYPE", 
                      "ARRAY_POINTER_TYPE", "COMMENT", "INTLIT", "FLOATLIT", 
                      "BOOLEANLIT", "STRINGLIT", "BOOLEAN", "BREAK", "CONTINUE", 
                      "ELSE", "FOR", "FLOAT", "IF", "INT", "RETURN", "VOID", 
                      "DO", "WHILE", "TRUE", "FALSE", "STRING", "ID", "ADD", 
                      "SUB", "MUL", "DIV", "NOT", "MOD", "OR", "AND", "NOT_EQUAL", 
                      "EQUAL", "LESS_THAN", "GREAT_THAN", "LESS_EQ", "GREAT_EQ", 
                      "ASSIGN", "LSB", "RSB", "LP", "RP", "LB", "RB", "SEMI", 
                      "COMA", "DOT" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_func_decl = 2
    RULE_func_type = 3
    RULE_para_list = 4
    RULE_para_decl = 5
    RULE_var_decl = 6
    RULE_id_list = 7
    RULE_id_var = 8
    RULE_exp = 9
    RULE_exp_1 = 10
    RULE_exp_2 = 11
    RULE_exp_3 = 12
    RULE_exp_4 = 13
    RULE_exp_5 = 14
    RULE_exp_6 = 15
    RULE_exp_7 = 16
    RULE_exp_8 = 17
    RULE_exp_9 = 18
    RULE_exp_0 = 19
    RULE_if_state = 20
    RULE_do_while_state = 21
    RULE_for_state = 22
    RULE_break_state = 23
    RULE_continue_state = 24
    RULE_return_state = 25
    RULE_exp_state = 26
    RULE_assign_state = 27
    RULE_block_state = 28
    RULE_statement = 29
    RULE_func_call = 30

    ruleNames =  [ "program", "decl", "func_decl", "func_type", "para_list", 
                   "para_decl", "var_decl", "id_list", "id_var", "exp", 
                   "exp_1", "exp_2", "exp_3", "exp_4", "exp_5", "exp_6", 
                   "exp_7", "exp_8", "exp_9", "exp_0", "if_state", "do_while_state", 
                   "for_state", "break_state", "continue_state", "return_state", 
                   "exp_state", "assign_state", "block_state", "statement", 
                   "func_call" ]

    EOF = Token.EOF
    WS=1
    ERROR_CHAR=2
    UNCLOSE_STRING=3
    ILLEGAL_ESCAPE=4
    PRIM_TYPE=5
    VOIDTYPE=6
    BOOLEAN_TYPE=7
    INTTYPE=8
    FLOAT_TYPE=9
    STRING_TYPE=10
    ARRAY_TYPE=11
    ARRAY_POINTER_TYPE=12
    COMMENT=13
    INTLIT=14
    FLOATLIT=15
    BOOLEANLIT=16
    STRINGLIT=17
    BOOLEAN=18
    BREAK=19
    CONTINUE=20
    ELSE=21
    FOR=22
    FLOAT=23
    IF=24
    INT=25
    RETURN=26
    VOID=27
    DO=28
    WHILE=29
    TRUE=30
    FALSE=31
    STRING=32
    ID=33
    ADD=34
    SUB=35
    MUL=36
    DIV=37
    NOT=38
    MOD=39
    OR=40
    AND=41
    NOT_EQUAL=42
    EQUAL=43
    LESS_THAN=44
    GREAT_THAN=45
    LESS_EQ=46
    GREAT_EQ=47
    ASSIGN=48
    LSB=49
    RSB=50
    LP=51
    RP=52
    LB=53
    RB=54
    SEMI=55
    COMA=56
    DOT=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MCParser.DeclContext,0)


        def EOF(self):
            return self.getToken(MCParser.EOF, 0)

        def getRuleIndex(self):
            return MCParser.RULE_program




    def program(self):

        localctx = MCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.decl()
            self.state = 63
            self.match(MCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.Func_declContext)
            else:
                return self.getTypedRuleContext(MCParser.Func_declContext,i)


        def var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.Var_declContext)
            else:
                return self.getTypedRuleContext(MCParser.Var_declContext,i)


        def getRuleIndex(self):
            return MCParser.RULE_decl




    def decl(self):

        localctx = MCParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 67
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 65
                    self.func_decl()
                    pass

                elif la_ == 2:
                    self.state = 66
                    self.var_decl()
                    pass


                self.state = 69 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.PRIM_TYPE) | (1 << MCParser.VOIDTYPE) | (1 << MCParser.ARRAY_POINTER_TYPE))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Func_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_type(self):
            return self.getTypedRuleContext(MCParser.Func_typeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LB(self):
            return self.getToken(MCParser.LB, 0)

        def para_list(self):
            return self.getTypedRuleContext(MCParser.Para_listContext,0)


        def RB(self):
            return self.getToken(MCParser.RB, 0)

        def block_state(self):
            return self.getTypedRuleContext(MCParser.Block_stateContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_func_decl




    def func_decl(self):

        localctx = MCParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_func_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.func_type()
            self.state = 72
            self.match(MCParser.ID)
            self.state = 73
            self.match(MCParser.LB)
            self.state = 74
            self.para_list()
            self.state = 75
            self.match(MCParser.RB)
            self.state = 76
            self.block_state()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Func_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY_POINTER_TYPE(self):
            return self.getToken(MCParser.ARRAY_POINTER_TYPE, 0)

        def VOIDTYPE(self):
            return self.getToken(MCParser.VOIDTYPE, 0)

        def PRIM_TYPE(self):
            return self.getToken(MCParser.PRIM_TYPE, 0)

        def getRuleIndex(self):
            return MCParser.RULE_func_type




    def func_type(self):

        localctx = MCParser.Func_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_func_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.PRIM_TYPE) | (1 << MCParser.VOIDTYPE) | (1 << MCParser.ARRAY_POINTER_TYPE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Para_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def para_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.Para_declContext)
            else:
                return self.getTypedRuleContext(MCParser.Para_declContext,i)


        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.COMA)
            else:
                return self.getToken(MCParser.COMA, i)

        def getRuleIndex(self):
            return MCParser.RULE_para_list




    def para_list(self):

        localctx = MCParser.Para_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_para_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MCParser.PRIM_TYPE:
                self.state = 80
                self.para_decl()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MCParser.COMA:
                    self.state = 81
                    self.match(MCParser.COMA)
                    self.state = 82
                    self.para_decl()
                    self.state = 87
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Para_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRIM_TYPE(self):
            return self.getToken(MCParser.PRIM_TYPE, 0)

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LSB(self):
            return self.getToken(MCParser.LSB, 0)

        def RSB(self):
            return self.getToken(MCParser.RSB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_para_decl




    def para_decl(self):

        localctx = MCParser.Para_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_para_decl)
        try:
            self.state = 96
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.match(MCParser.PRIM_TYPE)
                self.state = 91
                self.match(MCParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.match(MCParser.PRIM_TYPE)
                self.state = 93
                self.match(MCParser.ID)
                self.state = 94
                self.match(MCParser.LSB)
                self.state = 95
                self.match(MCParser.RSB)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRIM_TYPE(self):
            return self.getToken(MCParser.PRIM_TYPE, 0)

        def id_list(self):
            return self.getTypedRuleContext(MCParser.Id_listContext,0)


        def SEMI(self):
            return self.getToken(MCParser.SEMI, 0)

        def getRuleIndex(self):
            return MCParser.RULE_var_decl




    def var_decl(self):

        localctx = MCParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(MCParser.PRIM_TYPE)
            self.state = 99
            self.id_list()
            self.state = 100
            self.match(MCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Id_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.Id_varContext)
            else:
                return self.getTypedRuleContext(MCParser.Id_varContext,i)


        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.COMA)
            else:
                return self.getToken(MCParser.COMA, i)

        def getRuleIndex(self):
            return MCParser.RULE_id_list




    def id_list(self):

        localctx = MCParser.Id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_id_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.id_var()
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MCParser.COMA:
                self.state = 103
                self.match(MCParser.COMA)
                self.state = 104
                self.id_var()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Id_varContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def ARRAY_TYPE(self):
            return self.getToken(MCParser.ARRAY_TYPE, 0)

        def getRuleIndex(self):
            return MCParser.RULE_id_var




    def id_var(self):

        localctx = MCParser.Id_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_id_var)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            _la = self._input.LA(1)
            if not(_la==MCParser.ARRAY_TYPE or _la==MCParser.ID):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp_1(self):
            return self.getTypedRuleContext(MCParser.Exp_1Context,0)


        def ASSIGN(self):
            return self.getToken(MCParser.ASSIGN, 0)

        def exp(self):
            return self.getTypedRuleContext(MCParser.ExpContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_exp




    def exp(self):

        localctx = MCParser.ExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_exp)
        try:
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.exp_1(0)
                self.state = 113
                self.match(MCParser.ASSIGN)
                self.state = 114
                self.exp()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.exp_1(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Exp_1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp_2(self):
            return self.getTypedRuleContext(MCParser.Exp_2Context,0)


        def exp_1(self):
            return self.getTypedRuleContext(MCParser.Exp_1Context,0)


        def OR(self):
            return self.getToken(MCParser.OR, 0)

        def getRuleIndex(self):
            return MCParser.RULE_exp_1



    def exp_1(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MCParser.Exp_1Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_exp_1, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.exp_2(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 127
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MCParser.Exp_1Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_exp_1)
                    self.state = 122
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 123
                    self.match(MCParser.OR)
                    self.state = 124
                    self.exp_2(0) 
                self.state = 129
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Exp_2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp_3(self):
            return self.getTypedRuleContext(MCParser.Exp_3Context,0)


        def exp_2(self):
            return self.getTypedRuleContext(MCParser.Exp_2Context,0)


        def AND(self):
            return self.getToken(MCParser.AND, 0)

        def getRuleIndex(self):
            return MCParser.RULE_exp_2



    def exp_2(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MCParser.Exp_2Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 22
        self.enterRecursionRule(localctx, 22, self.RULE_exp_2, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.exp_3(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 138
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MCParser.Exp_2Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_exp_2)
                    self.state = 133
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 134
                    self.match(MCParser.AND)
                    self.state = 135
                    self.exp_3(0) 
                self.state = 140
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Exp_3Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp_4(self):
            return self.getTypedRuleContext(MCParser.Exp_4Context,0)


        def exp_3(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.Exp_3Context)
            else:
                return self.getTypedRuleContext(MCParser.Exp_3Context,i)


        def EQUAL(self):
            return self.getToken(MCParser.EQUAL, 0)

        def NOT_EQUAL(self):
            return self.getToken(MCParser.NOT_EQUAL, 0)

        def getRuleIndex(self):
            return MCParser.RULE_exp_3



    def exp_3(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MCParser.Exp_3Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 24
        self.enterRecursionRule(localctx, 24, self.RULE_exp_3, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.exp_4(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 149
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MCParser.Exp_3Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_exp_3)
                    self.state = 144
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 145
                    _la = self._input.LA(1)
                    if not(_la==MCParser.NOT_EQUAL or _la==MCParser.EQUAL):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 146
                    self.exp_3(3) 
                self.state = 151
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Exp_4Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp_5(self):
            return self.getTypedRuleContext(MCParser.Exp_5Context,0)


        def exp_4(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.Exp_4Context)
            else:
                return self.getTypedRuleContext(MCParser.Exp_4Context,i)


        def LESS_THAN(self):
            return self.getToken(MCParser.LESS_THAN, 0)

        def LESS_EQ(self):
            return self.getToken(MCParser.LESS_EQ, 0)

        def GREAT_THAN(self):
            return self.getToken(MCParser.GREAT_THAN, 0)

        def GREAT_EQ(self):
            return self.getToken(MCParser.GREAT_EQ, 0)

        def getRuleIndex(self):
            return MCParser.RULE_exp_4


